design: fix alignment in choice list

--- a/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/form/choice-list.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/form/choice-list.less
@@ -7,6 +7,7 @@ Form block construction, where is one choice on one line.
 
 .form-choice-list {
 	display: inline-block;
+	vertical-align: top;
 	padding-top: 5px;
 	padding-bottom: 5px;
 
