--- a/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/form/choice.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/form/choice.less
@@ -7,6 +7,7 @@ Form inline construction for checkboxes or radios
 
 .form-choice {
 	display: inline-block;
+	vertical-align: top;
 	padding: 6px 12px 6px 0;
 
 	&__input {
